# ccimt

./: .gitignore  .pre-commit-config.yaml  ccimt-config.yml  justfile  pyproject.toml
cci-fork/recipes/ccimt-test-fork/: config.yml
cci-fork/recipes/ccimt-test-fork/all/: conanfile.py
cci-fork/recipes/ccimt-test-local/: config.yml
cci-fork/recipes/ccimt-test-local/all/: conanfile.py
cci-fork/recipes/zlib/: config.yml
docs/: concepts.md
src/ccimt/: config.py
test/unit/: test_config.py
